begin mini project

--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -5,7 +5,17 @@
 @source '../**/*.blade.php';
 @source '../**/*.js';
 
-@theme {
-    --font-sans: 'Instrument Sans', ui-sans-serif, system-ui, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji',
-        'Segoe UI Symbol', 'Noto Color Emoji';
+
+:root{
+    --acsentColor: #00df9c;
+    --textColor: #1b1b1b;
+    --bgColor: #f8f7ff;
+}
+
+body {
+    font-family: "Nunito", sans-serif;
+    font-optical-sizing: auto;
+    font-style: normal;
+    content: "ec8f";
+    color: "#1b1b1b";
 }
